# recipe-api

./: .env.example  .gitignore  ARCHITECTURE.md  ASSIGNMENT.md  README.md  SOLUTION.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_meal_plan.py  002_meal_plans.py  003_refactor_some_column_tables.py
app/: config.py  database.py  main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: auth.py  meal_plan.py  recipes.py
app/models/: __init__.py  ingredient.py  meal_plan.py  meal_plan_item.py  recipe.py  user.py
app/repositories/: meal_plan.py  recipe.py  user.py
app/schemas/: auth.py  ingredient.py  meal_plan.py  pagination.py  recipe.py
app/seed/: data.json  seed_db.py
app/services/: auth.py  meal_plan.py  recipe.py
tests/: conftest.py  test_auth.py  test_meal_plans.py  test_recipes.py
